--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
 FROM ubuntu:latest
 
 RUN apt-get update && apt-get -y install perl curl build-essential
-RUN curl -L https://cpanmin.us | perl - Plack Dancer2
+RUN cpan install CPAN::DistnameInfo Unknown::Values Plack Plack::Middleware::FixMissingBodyInRedirect Dancer2
