--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,28 @@
 FROM ubuntu:latest
 
-RUN apt-get update && apt-get -y install perl curl build-essential
-RUN cpan install CPAN::DistnameInfo Unknown::Values Plack Plack::Middleware::FixMissingBodyInRedirect Dancer2
+ARG USERNAME=vscode
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+    #
+    # [Optional] Add sudo support. Omit if you don't need to install software after connecting.
+    && apt-get update \
+    && apt-get install -y sudo \
+    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME 
+
+RUN apt-get update && apt-get -y install git perl curl build-essential
+RUN curl -L https://cpanmin.us | perl - --sudo App::cpanminus
+RUN cpanm --sudo App::cpm
+
+WORKDIR /usr
+RUN sudo cpm install Dancer2 Dancer2::CLI
+
+ENV PERL5LIB=/usr/local/lib/perl5
+ENV PATH=/usr/local/bin:$PATH
+
+WORKDIR /
+
+USER $USERNAME  
