--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    
     volumes:
-      - ../../:/workspaces:cached
+      - ..:/workspaces:cached
 
     command: sleep infinity
+    user: "vscode:vscode"
+    
